# DoubleTapEvaluator

./: CMakeLists.txt  README.MD
include/: doubletap_eval.h
src/: doubletap_eval.c
tests/: all_hands_test.c  random_hands_test.c
